--- a/wifiscan/src/main/res/values/strings.xml
+++ b/wifiscan/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">wifiscan</string>
+    <string name="permission_request">Permission Request</string>
+    <string name="Wifi_permission">Please  wifi permission manually</string>
+    <string name="wifi_allow">allow</string>
+    <string name="wifi_denial"> Denial</string>
+
 </resources>
